--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:styles": "postcss src/styles/tailwindcss.css -o src/styles/tailwindcss.css",
+    "build:styles": "postcss src/styles/tailwindcss.css -o src/styles/index.css",
     "prebuild": "yarn build:styles --env production",
     "prestart": "yarn build:styles"
   },
