--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.7.4",
     "postcss-cli": "^7.1.0",
+    "postcss-import": "^12.0.1",
     "tailwindcss": "^1.2.0"
   }
 }
