--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react-transition-group": "^4.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "react": "react-scripts start",
+    "postcss": "postcss src/styles/input --dir src/styles/output -w",
+    "start": "concurrently \"yarn react\" \"yarn postcss\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build:styles": "postcss src/styles/tailwindcss.css -o src/styles/index.css",
-    "prebuild": "yarn build:styles --env production",
-    "prestart": "yarn build:styles"
+    "build:styles": "postcss src/styles/input --dir src/styles/output",
+    "prebuild": "yarn build:styles --env production"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +43,7 @@
     "@fullhuman/postcss-purgecss": "^2.1.0",
     "@tailwindcss/custom-forms": "^0.2.1",
     "autoprefixer": "^9.7.4",
+    "concurrently": "^5.1.0",
     "postcss-cli": "^7.1.0",
     "postcss-import": "^12.0.1",
     "tailwindcss": "^1.2.0"
