--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "concurrently": "^5.1.0",
     "postcss-cli": "^7.1.0",
     "postcss-import": "^12.0.1",
+    "postcss-nesting": "^7.0.1",
     "tailwindcss": "^1.2.0"
   }
 }
